--- a/quizzes/lib/integration.ini
+++ b/quizzes/lib/integration.ini
@@ -148,4 +148,38 @@ quizzes.configuration.class = "MoodleConfiguration"
 quizzes.accessprovider.classpath = ../classes
 quizzes.accessprovider.class = accessprovider
 
+;
+; The identification of this deployment of Wiris Quizzes. It depends on the integration
+; and on the technology used. Allows to identify calls to the Wiris Quizzes service.
+;
+quizzes.deployment.id = "quizzes-php-moodle"
+
+;
+; Url endpoint of the Telemetry API
+;
+
+;quizzes.telemetry.url = "https://telemetry.wiris.net";
+
+
+;
+; Authentication token for the Telemetry API
+;
+
+;quizzes.telemetry.token = "1lt1OnlX3898VauysJ1nr5ODR8CNfVmB80KGxSSt";
+
+
+;
+; Logging level for Quizzes telemetry service integration.
+; Possible values: NONE, ERROR, WARNING, INFO, DEBUG.
+;
+
+;quizzes.logging.level = "WARNING";
+
+;
+; Default tracking configuration for Quizzes telemetry service integration.
+;
+
+;quizzes.tracking.enabled = "true";
+
+
 
